# pyhorn_exp

./: .gitignore  README.md  pyproject.toml
integrations/onshape/: .eslintrc.cjs  eslint-plugin-featurescript.js  eslint.config.js  lint.mjs  onshape_fsdoc.md  package-lock.json  package.json  pyhorn_auto_segment.fs  pyhorn_core.fs  pyhorn_horn.fs  pyhorn_horn_sections.fs
pyhorn_fold/: __init__.py  folding.py  pyproject.toml
pyhorn_fold/tests/: test_folding.py
pyhorn_ml/: PLAN.md  __init__.py  __main__.py  pyproject.toml
pyhorn_ml/cli/: __init__.py  commands.py  compare.py  inverse.py  optimize.py  report.py  train.py
pyhorn_ml/core/: __init__.py  design_point.py  score.py  space.py  target.py
pyhorn_ml/data/: __init__.py  dataset.py
pyhorn_ml/optimization/: __init__.py  acquisition.py  bayesian.py  pareto.py
pyhorn_ml/pipeline/: evaluate.py
pyhorn_ml/plot/: __init__.py  convergence.py  pareto.py  response.py
pyhorn_ml/surrogate/: __init__.py  base.py  factory.py  gp.py  mlp.py
pyhorn_ml/tests/: __init__.py  test_pyhorn_ml_pipeline.py
pyhorn_registry/: README.md  __init__.py
pyhorn_registry/tests/: test_registry.py
pyhorn_segment/: README.md  __init__.py  pyproject.toml  segment.py
pyhorn_segment/tests/: test_segment.py
pyhorn_wavefront/: README.md  __init__.py  pyproject.toml  wavefront.py
pyhorn_wavefront/tests/: test_wavefront.py
