[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhorn-exp"
version = "0.1.0"
description = "Experimental pyhorn packages: ML optimization, waveguide analysis, fold/segment tools"
license = { text = "MIT" }
authors = [{ name = "Guillaume de Boyer-Montegut" }]
requires-python = ">=3.10"
dependencies = [
    "pyhorn @ git+https://github.com/minipons/pyhorn.git@main",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "scikit-optimize>=0.9.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0.0",
    "typer>=0.9.0",
    "jinja2>=3.1.0",
    "joblib>=1.3.0",
    "shapely>=2.0.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "pyhorn_ml*",
    "pyhorn_fold*",
    "pyhorn_wavefront*",
    "pyhorn_segment*",
    "pyhorn_registry*",
]

[tool.pytest.ini_options]
testpaths = ["pyhorn_ml/tests", "pyhorn_fold/tests", "pyhorn_wavefront/tests", "pyhorn_segment/tests", "pyhorn_registry/tests"]
addopts = "-q --tb=short"
