[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhorn-fold"
version = "0.1.0"
description = "SLSQP-based horn path folding — extracted from pyhorn_core"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Guillaume de Boyer-Montegut" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "shapely>=2.0.0",
    "pyhorn-core>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyhorn_fold*"]
exclude = ["tests", "tests.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
