[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhorn-ml"
version = "0.1.0"
description = "ML-driven horn speaker design optimization built on pyhorn"
readme = "PLAN.md"
license = { text = "MIT" }
authors = [{ name = "Guillaume de Boyer-Montegut" }]
requires-python = ">=3.10"
dependencies = [
    "pyhorn>=0.1.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "scikit-optimize>=0.9.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0.0",
    "typer>=0.9.0",
    "jinja2>=3.1.0",
    "joblib>=1.3.0",
]

[project.scripts]
pyhorn-ml = "pyhorn_ml.__main__:app"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyhorn_ml*"]
exclude = ["tests*", "study*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
